# etchdroid

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-test-debug.yml
app/: build.gradle.kts
appium-tests/: README.md  conftest.py  package-lock.json  package.json  pyproject.toml
appium-tests/etchdroid/: __init__.py  actions.py  config.py  fixtures.py  qemu.py  utils.py
appium-tests/scripts/: ci-qemu-prepare.sh
appium-tests/tests/: test_generic.py  test_qemu.py
fastlane/metadata/android/az-AZ/: full_description.txt
fastlane/metadata/android/de-DE/: title.txt
fastlane/metadata/android/fa-IR/: full_description.txt  title.txt
fastlane/metadata/android/fi-FI/: full_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt
fastlane/metadata/android/gl-ES/: full_description.txt  title.txt
fastlane/metadata/android/iw-IL/: full_description.txt
fastlane/metadata/android/ja-JP/: full_description.txt
fastlane/metadata/android/my-MM/: full_description.txt  title.txt
fastlane/metadata/android/nb-NO/: full_description.txt
fastlane/metadata/android/nl-NL/: full_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt
fastlane/metadata/android/sv-SE/: full_description.txt
fastlane/metadata/android/ta-IN/: full_description.txt
gradle/: libs.versions.toml
metadata/zh-TW/changelogs/: 12.txt  23.txt
misc/: mock-google-services.json
(+80 files in other folders)
